--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -50,16 +50,15 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <div class="d-flex align-items-center ml-auto">
-                        <div class="dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin User</span>
+                        <div class="dropdown">                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small user-name">Admin User</span>
                                 <img class="img-profile rounded-circle" src="https://via.placeholder.com/40">
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw mr-2"></i> Profile</a></li>
                                 <li><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2"></i> Settings</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2"></i> Logout</a></li>
+                                <li><a class="dropdown-item logout-btn" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2"></i> Logout</a></li>
                             </ul>
                         </div>
                     </div>
@@ -67,12 +66,16 @@
             </nav>
 
             <!-- Dashboard Content -->
-            <div class="container-fluid p-4">
-                <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-                        <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
-                    </a>
+            <div class="container-fluid p-4">                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <h1 class="h3 mb-0 text-gray-800 page-title">Dashboard</h1>
+                    <div>
+                        <button id="refresh-data" class="btn btn-sm btn-secondary shadow-sm me-2">
+                            <i class="fas fa-sync fa-sm text-white-50"></i> Refresh
+                        </button>
+                        <button id="export-reports" class="btn btn-sm btn-primary shadow-sm">
+                            <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Stats Cards -->
@@ -80,10 +83,9 @@
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card stat-card primary h-100 py-2">
                             <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
+                                <div class="row no-gutters align-items-center">                                    <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Users</div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">1,234</div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-users">Loading...</div>
                                     </div>
                                     <div class="col-auto">
                                         <i class="fas fa-users fa-2x text-gray-300"></i>
@@ -214,9 +216,10 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </div>    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../../js/api-client.js"></script>
+    <script src="../../js/auth.js"></script>
+    <script src="../../js/admin-dashboard.js"></script>
 </body>
-</html> 
+</html>
