--- a/frontend/pages/auth/register.html
+++ b/frontend/pages/auth/register.html
@@ -129,9 +129,8 @@
             </form>
             <div id="alertMessage" class="mt-3"></div>
         </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    </div>    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/api-client.js"></script>
     <script>
         // Password validation
         const password = document.getElementById('password');
@@ -182,9 +181,7 @@
                 e.target.classList.toggle('is-invalid', !e.target.checkValidity());
             }
             validatePassword();
-        });
-
-        form.addEventListener('submit', async (e) => {
+        });        form.addEventListener('submit', async (e) => {
             e.preventDefault();
             
             if (!form.checkValidity()) {
@@ -197,40 +194,23 @@
             alertDiv.innerHTML = '<div class="alert alert-info">Processing registration...</div>';
             submitBtn.disabled = true;
 
-            // Convert FormData to JSON
+            // Get form data
             const formData = new FormData(form);
-            const jsonData = {};
+            const userData = {};
             formData.forEach((value, key) => {
-                jsonData[key] = value;
+                userData[key] = value;
             });
-            jsonData.action = 'register';
 
             try {
-                const response = await fetch('/backend/api/auth.php', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Accept': 'application/json'
-                    },
-                    body: JSON.stringify(jsonData),
-                    credentials: 'same-origin'
-                });
-
-                if (!response.ok) {
-                    const errorText = await response.text();
-                    console.error('Server response:', errorText);
-                    throw new Error(`Registration failed (${response.status}). Please try again.`);
-                }
-
-                const data = await response.json();
+                const response = await window.apiClient.register(userData);
                 
-                if (data.success) {
+                if (response.success) {
                     alertDiv.innerHTML = '<div class="alert alert-success">Registration successful! Redirecting to login...</div>';
                     setTimeout(() => {
                         window.location.href = 'login.html';
                     }, 2000);
                 } else {
-                    throw new Error(data.message || 'Registration failed');
+                    throw new Error(response.message || 'Registration failed');
                 }
             } catch (error) {
                 console.error('Registration error:', error);
