--- a/frontend/pages/staff/dashboard.html
+++ b/frontend/pages/staff/dashboard.html
@@ -221,8 +221,9 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </div>    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/api-client.js"></script>
+    <script src="../../js/auth.js"></script>
+    <script src="../../js/staff-dashboard.js"></script>
 </body>
-</html> 
+</html>
