--- a/frontend/pages/vet/dashboard.html
+++ b/frontend/pages/vet/dashboard.html
@@ -369,9 +369,10 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </div>    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/api-client.js"></script>
+    <script src="../../js/auth.js"></script>
+    <script src="../../js/vet-dashboard.js"></script>
     <script>
         // Update current date
         document.getElementById('currentDate').textContent = new Date().toLocaleDateString('en-US', {
