--- a/frontend/pages/volunteer/dashboard.html
+++ b/frontend/pages/volunteer/dashboard.html
@@ -311,5 +311,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/api-client.js"></script>
+    <script src="../../js/auth.js"></script>
+    <script src="../../js/volunteer-dashboard.js"></script>
 </body>
 </html> 
