--- a/frontend/pages/volunteer/schedule.html
+++ b/frontend/pages/volunteer/schedule.html
@@ -82,170 +82,85 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container py-4">
-        <!-- Header -->
+    <div class="container py-4">        <!-- Header -->
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2 class="mb-0">Volunteer Schedule</h2>
             <div>
                 <button class="btn btn-outline-secondary me-2">
                     <i class="fas fa-filter me-2"></i>Filter
                 </button>
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signupShiftModal">
+                <button class="btn btn-primary" id="signupShiftBtn" data-bs-toggle="modal" data-bs-target="#signupShiftModal">
                     <i class="fas fa-plus me-2"></i>Sign Up for Shift
                 </button>
             </div>
-        </div>
-
-        <!-- Calendar Navigation -->
+        </div><!-- Calendar Navigation -->
         <div class="card mb-4">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <button class="btn btn-outline-secondary me-2">
+                        <button class="btn btn-outline-secondary me-2" id="prevMonthBtn">
                             <i class="fas fa-chevron-left"></i>
                         </button>
-                        <button class="btn btn-outline-secondary">
+                        <button class="btn btn-outline-secondary" id="nextMonthBtn">
                             <i class="fas fa-chevron-right"></i>
                         </button>
                     </div>
-                    <h3 class="mb-0">February 2024</h3>
+                    <h3 class="mb-0" id="currentMonthYear">February 2024</h3>
                     <div>
-                        <button class="btn btn-outline-secondary me-2">Today</button>
+                        <button class="btn btn-outline-secondary me-2" id="todayBtn">Today</button>
                         <div class="btn-group">
-                            <button class="btn btn-outline-secondary active">Month</button>
-                            <button class="btn btn-outline-secondary">Week</button>
-                            <button class="btn btn-outline-secondary">Day</button>
+                            <button class="btn btn-outline-secondary active view-btn">Month</button>
+                            <button class="btn btn-outline-secondary view-btn">Week</button>
+                            <button class="btn btn-outline-secondary view-btn">Day</button>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <!-- Calendar Grid -->
+        </div>        <!-- Calendar Grid -->
         <div class="card">
             <div class="card-body p-2">
-                <!-- Days of Week -->
-                <div class="row text-center fw-bold py-2">
-                    <div class="col">Sunday</div>
-                    <div class="col">Monday</div>
-                    <div class="col">Tuesday</div>
-                    <div class="col">Wednesday</div>
-                    <div class="col">Thursday</div>
-                    <div class="col">Friday</div>
-                    <div class="col">Saturday</div>
-                </div>
-
-                <!-- Calendar Days -->
-                <div class="row g-0">
-                    <!-- Week 1 -->
-                    <div class="col calendar-day text-muted">28</div>
-                    <div class="col calendar-day text-muted">29</div>
-                    <div class="col calendar-day text-muted">30</div>
-                    <div class="col calendar-day text-muted">31</div>
-                    <div class="col calendar-day">1</div>
-                    <div class="col calendar-day">2</div>
-                    <div class="col calendar-day">3</div>
-                </div>
-                <div class="row g-0">
-                    <!-- Week 2 -->
-                    <div class="col calendar-day">4</div>
-                    <div class="col calendar-day">5</div>
-                    <div class="col calendar-day">6</div>
-                    <div class="col calendar-day">7</div>
-                    <div class="col calendar-day">8</div>
-                    <div class="col calendar-day">9</div>
-                    <div class="col calendar-day">10</div>
-                </div>
-                <div class="row g-0">
-                    <!-- Week 3 -->
-                    <div class="col calendar-day">11</div>
-                    <div class="col calendar-day">12</div>
-                    <div class="col calendar-day">13</div>
-                    <div class="col calendar-day">14</div>
-                    <div class="col calendar-day">15</div>
-                    <div class="col calendar-day">16</div>
-                    <div class="col calendar-day">17</div>
-                </div>
-                <div class="row g-0">
-                    <!-- Week 4 -->
-                    <div class="col calendar-day">18</div>
-                    <div class="col calendar-day">19</div>
-                    <div class="col calendar-day">20</div>
-                    <div class="col calendar-day">21</div>
-                    <div class="col calendar-day">
-                        22
-                        <div class="calendar-event event-confirmed">
-                            9:00 AM - Animal Care
+                <div id="calendarGrid">
+                    <!-- Calendar will be rendered dynamically -->
+                    <div class="text-center py-5">
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
                         </div>
+                        <p class="mt-2 text-muted">Loading schedule...</p>
                     </div>
-                    <div class="col calendar-day">23</div>
-                    <div class="col calendar-day">
-                        24
-                        <div class="calendar-event event-pending">
-                            2:00 PM - Event Support
-                        </div>
-                    </div>
-                </div>
-                <div class="row g-0">
-                    <!-- Week 5 -->
-                    <div class="col calendar-day">
-                        25
-                        <div class="calendar-event event-confirmed">
-                            10:00 AM - Animal Care
-                        </div>
-                    </div>
-                    <div class="col calendar-day">26</div>
-                    <div class="col calendar-day">27</div>
-                    <div class="col calendar-day">28</div>
-                    <div class="col calendar-day">29</div>
-                    <div class="col calendar-day text-muted">1</div>
-                    <div class="col calendar-day text-muted">2</div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- Sign Up Shift Modal -->
+    </div>    <!-- Sign Up Shift Modal -->
     <div class="modal fade" id="signupShiftModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Sign Up for Shift</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label class="form-label">Date</label>
-                            <input type="date" class="form-control">
+                    <div class="mb-3">
+                        <h6>Available Shifts</h6>
+                        <div id="availableShiftsContainer">
+                            <!-- Available shifts will be loaded here -->
+                            <div class="text-center py-3">
+                                <div class="spinner-border spinner-border-sm" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                                <p class="mt-2 text-muted">Loading available shifts...</p>
+                            </div>
                         </div>
-                        <div class="mb-3">
-                            <label class="form-label">Time</label>
-                            <select class="form-select">
-                                <option>Morning (9:00 AM - 12:00 PM)</option>
-                                <option>Afternoon (2:00 PM - 5:00 PM)</option>
-                                <option>Evening (5:00 PM - 8:00 PM)</option>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Role</label>
-                            <select class="form-select">
-                                <option>Animal Care</option>
-                                <option>Event Support</option>
-                                <option>Administrative</option>
-                                <option>Dog Walking</option>
-                                <option>Cat Socialization</option>
-                            </select>
-                        </div>
+                    </div>
+                    <form id="signupShiftForm">
                         <div class="mb-3">
                             <label class="form-label">Notes</label>
-                            <textarea class="form-control" rows="3" placeholder="Any special requirements or notes"></textarea>
+                            <textarea class="form-control" name="notes" rows="3" placeholder="Any special requirements or notes"></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Sign Up</button>
+                    <button type="button" class="btn btn-primary" id="saveSignupBtn">Sign Up</button>
                 </div>
             </div>
         </div>
@@ -282,8 +197,12 @@
                 <p class="mb-0">&copy; 2024 Pet Adoption System. All rights reserved.</p>
             </div>
         </div>
-    </footer>
+    </footer>    <!-- Alert Container -->
+    <div id="alertContainer" class="position-fixed top-0 end-0 p-3" style="z-index: 1050;"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/api-client.js"></script>
+    <script src="../../js/auth.js"></script>
+    <script src="../../js/volunteer-schedule.js"></script>
 </body>
-</html> 
+</html>
